[ADDED] ortho camera
Former-commit-id: 82b95a9e7cb8c0f6307cdbae16beb86941b24d36

--- a/easyeditor/platform/msvc2008/projects/librender.vcproj
+++ b/easyeditor/platform/msvc2008/projects/librender.vcproj
@@ -474,20 +474,40 @@
 				>
 			</File>
 		</Filter>
+		<Filter
+			Name="camera"
+			>
+			<File
+				RelativePath="..\..\..\source\render\Camera.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\include\ee\Camera.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\source\render\OrthoCamera.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\include\ee\OrthoCamera.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\source\render\PerspectCamera.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\include\ee\PerspectCamera.h"
+				>
+			</File>
+		</Filter>
 		<File
 			RelativePath="..\..\..\source\render\BlendModes.cpp"
 			>
 		</File>
 		<File
 			RelativePath="..\..\..\include\ee\BlendModes.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\source\render\Camera.cpp"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\include\ee\Camera.h"
 			>
 		</File>
 		<File
