[ADDED] sl model draw
Former-commit-id: 6f651e8cb8c304ac013cba2a376a5ce2281d5bb0

--- a/glue/platform/msvc2008/projects/glue.vcproj
+++ b/glue/platform/msvc2008/projects/glue.vcproj
@@ -203,6 +203,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\render\ModelShader.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\render\ModelShader.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\render\ShapeShader.cpp"
 					>
 				</File>
