[ADDED] filter shader
Former-commit-id: e2db44ab9b360856d1da11d029bdb3c56bd753f7

--- a/easyeditor/platform/msvc2008/projects/librender.vcproj
+++ b/easyeditor/platform/msvc2008/projects/librender.vcproj
@@ -261,6 +261,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\source\render\FilterShader.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\include\ee\FilterShader.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\source\render\ModelShader.cpp"
 					>
 				</File>
