--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "shaderlab/src/shaderlab"]
 	path = shaderlab/src/shaderlab
 	url = ssh://tea.ejoy.com:3222/LR/ShaderLab.git
+[submodule "ds/src/ds"]
+	path = ds/src/ds
+	url = ssh://tea.ejoy.com:3222/LR/ds.git
