[ADDED] submodule model3
Former-commit-id: d11e575cf1a50e84177ba0736f285dc1bc491f84

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "ds/src/ds"]
 	path = ds/src/ds
 	url = ssh://tea.ejoy.com:3222/LR/ds.git
+[submodule "model3/src/model3"]
+	path = model3/src/model3
+	url = ssh://tea.ejoy.com:3222/LR/model3.git
