--- a/easyeditor/platform/msvc2008/projects/libdata.vcproj
+++ b/easyeditor/platform/msvc2008/projects/libdata.vcproj
@@ -382,18 +382,6 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\source\data\common\Bitmap.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\include\ee\Bitmap.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\include\ee\ColorTrans.h"
-				>
-			</File>
-			<File
 				RelativePath="..\..\..\include\ee\common_type.h"
 				>
 			</File>
@@ -545,6 +533,14 @@
 		<Filter
 			Name="image"
 			>
+			<File
+				RelativePath="..\..\..\source\data\common\Bitmap.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\include\ee\Bitmap.h"
+				>
+			</File>
 			<File
 				RelativePath="..\..\..\source\data\image\Image.cpp"
 				>
@@ -775,6 +771,30 @@
 			</File>
 			<File
 				RelativePath="..\..\..\include\ee\SceneNode.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="complex"
+			>
+			<File
+				RelativePath="..\..\..\source\data\complex\ColorTrans.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\include\ee\ColorTrans.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\source\data\complex\ShaderTrans.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\include\ee\ShaderTrans.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\include\ee\SpriteTrans.h"
 				>
 			</File>
 		</Filter>
