--- a/shaderlab/platform/msvc2008/projects/shaderlab.vcproj
+++ b/shaderlab/platform/msvc2008/projects/shaderlab.vcproj
@@ -269,6 +269,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\shaderlab\gray.frag"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\shaderlab\outline.frag"
 				>
 			</File>
