[ADDED] heat haze
Former-commit-id: 11492d0f552c1d4e20045d11b586ad8655bf1e67

--- a/shaderlab/platform/msvc2008/projects/shaderlab.vcproj
+++ b/shaderlab/platform/msvc2008/projects/shaderlab.vcproj
@@ -273,6 +273,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\shaderlab\heat_haze.frag"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\shaderlab\outline.frag"
 				>
 			</File>
