--- a/shaderlab/platform/msvc2008/projects/shaderlab.vcproj
+++ b/shaderlab/platform/msvc2008/projects/shaderlab.vcproj
@@ -285,6 +285,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\shaderlab\shock_wave.frag"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\shaderlab\sl_filter.c"
 				>
 			</File>
