[ADDED] gaussian blur
Former-commit-id: 37f1ea4515f406d3038fe4b907fc85c0f9281ca7

--- a/shaderlab/platform/msvc2008/projects/shaderlab.vcproj
+++ b/shaderlab/platform/msvc2008/projects/shaderlab.vcproj
@@ -269,6 +269,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\shaderlab\gaussian_blur.frag"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\shaderlab\gray.frag"
 				>
 			</File>
