[ADDED] pack only image ept
Former-commit-id: 46bf15f38f0e4a2c5b037b9fd381088ed39c8042

--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -365,6 +365,14 @@
 						>
 					</File>
 					<File
+						RelativePath="..\..\..\src\easydb_cl\PackImageEPT.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\easydb_cl\PackImageEPT.h"
+						>
+					</File>
+					<File
 						RelativePath="..\..\..\src\easydb_cl\PackLuaDescFile.cpp"
 						>
 					</File>
