[ADDED] CameraTrans for perspective
Former-commit-id: bfde3c7c8685326a4d94fc8904cd12d99847ba1d

--- a/easyeditor/platform/msvc2008/projects/libdata.vcproj
+++ b/easyeditor/platform/msvc2008/projects/libdata.vcproj
@@ -778,6 +778,14 @@
 			Name="complex"
 			>
 			<File
+				RelativePath="..\..\..\source\data\complex\CameraTrans.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\include\ee\CameraTrans.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\source\data\complex\ColorTrans.cpp"
 				>
 			</File>
