--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "model3/src/model3"]
 	path = model3/src/model3
 	url = ssh://tea.ejoy.com:3222/LR/model3.git
+[submodule "sm/src/sm"]
+	path = sm/src/sm
+	url = git@github.com:xzrunner/sm.git
