--- a/shaderlab/platform/msvc2008/projects/shaderlab.vcproj
+++ b/shaderlab/platform/msvc2008/projects/shaderlab.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\..\src;..\..\..\..\ejoy2d\src;..\..\..\..\ds\src\ds;..\..\..\..\editor-external\c99"
+				AdditionalIncludeDirectories="..\..\..\src;..\..\..\..\ejoy2d\src;..\..\..\..\ds\src\ds;..\..\..\..\sm\src\sm;..\..\..\..\editor-external\c99"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC;USED_IN_EDITOR"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -105,7 +105,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\..\..\src;..\..\..\..\ejoy2d\src;..\..\..\..\ds\src\ds;..\..\..\..\editor-external\c99"
+				AdditionalIncludeDirectories="..\..\..\src;..\..\..\..\ejoy2d\src;..\..\..\..\ds\src\ds;..\..\..\..\sm\src\sm;..\..\..\..\editor-external\c99"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC;USED_IN_EDITOR"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -210,14 +210,6 @@
 			</File>
 			<File
 				RelativePath="..\..\..\src\shaderlab\sl_buffer.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\shaderlab\sl_math.c"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\shaderlab\sl_math.h"
 				>
 			</File>
 			<File
