--- a/model3/platform/msvc2008/projects/model3.vcproj
+++ b/model3/platform/msvc2008/projects/model3.vcproj
@@ -154,11 +154,11 @@
 			>
 		</File>
 		<File
-			RelativePath="..\..\..\src\model3\m3_mesh.c"
+			RelativePath="..\..\..\src\model3\m3_model.c"
 			>
 		</File>
 		<File
-			RelativePath="..\..\..\src\model3\m3_mesh.h"
+			RelativePath="..\..\..\src\model3\m3_model.h"
 			>
 		</File>
 		<File
